--- a/screenshots/frontend-deployment.yaml
+++ b/screenshots/frontend-deployment.yaml
@@ -21,6 +21,6 @@ spec:
         - containerPort: 80
         resources:
           limits:
-            cpu: "100"
+            cpu: "1m"
           requests:
-            cpu: "100"
+            cpu: "1m"
